--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
-# L'ensemble des fichiers contenus dans le dossier "data" seront pas transmis sur Git
-data/
+# L'ensemble des fichiers contenus dans le dossier "data", sauf "05_final_result_screenshots" seront pas transmis sur Git :
+
+data/01_strava_RAW_files/activities
+data/02_intermediate_CSV_files
+data/03_final_DATAFRAME_files
+data/04_final_FOLIUM_MAP
+
 
 # Ignorer le .venv
+
 .venv/
 .qodo
