--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ arrow==1.3.0
 asttokens==3.0.0
 async-lru==2.0.5
 attrs==25.3.0
+autoenv==1.0.0
 babel==2.17.0
 beautifulsoup4==4.13.3
 bitarray==3.0.0
@@ -16,18 +17,25 @@ bitstring==4.3.0
 bleach==6.2.0
 blessed==1.17.12
 bpylist2==4.1.1
+branca==0.8.1
 certifi==2025.1.31
 cffi==1.17.1
 cgmetadata==0.2.0
+chardet==5.2.0
 charset-normalizer==3.4.1
 click==8.1.8
 comm==0.2.2
+contourpy==1.3.2
+cycler==0.12.1
+DateTime==5.5
 debugpy==1.8.12
 decorator==5.1.1
 defusedxml==0.7.1
 executing==2.2.0
 fastjsonschema==2.21.1
 fitparse==1.2.0
+folium==0.19.6
+fonttools==4.57.0
 fqdn==1.5.1
 gpx-converter==2.1.0
 gpxpy==1.6.2
@@ -53,11 +61,13 @@ jupyter_server_terminals==0.5.3
 jupyterlab==4.3.6
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
+kiwisolver==1.4.8
 mac-alias==2.2.2
 makelive==0.6.2
 Mako==1.2.4
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.10.1
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 mistune==3.1.2
@@ -80,6 +90,7 @@ parso==0.8.4
 pathvalidate==3.2.3
 pexpect==4.9.0
 photoscript==0.4.0
+pillow==11.2.1
 platformdirs==4.3.6
 prometheus_client==0.21.1
 prompt_toolkit==3.0.50
@@ -108,6 +119,7 @@ pyobjc-framework-Quartz==10.3.2
 pyobjc-framework-ScriptingBridge==10.3.2
 pyobjc-framework-UniformTypeIdentifiers==9.2
 pyobjc-framework-Vision==10.3.2
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
 pytimeparse2==1.7.1
@@ -121,6 +133,7 @@ rfc3986-validator==0.1.1
 rich==13.9.4
 rich-theme-manager==0.11.0
 rpds-py==0.23.1
+scipy==1.15.3
 Send2Trash==1.8.3
 setuptools==76.0.0
 shortuuid==1.0.13
@@ -151,3 +164,5 @@ wrapt==1.17.2
 wurlitzer==3.1.1
 xattr==1.1.4
 xdg-base-dirs==6.0.2
+xyzservices==2025.4.0
+zope.interface==7.2
